# columbia-ms-courses-home

./: .gitignore  README.md
ms-courses-home/: Pulumi.ms-courses-home.yaml  Pulumi.yaml  __main__.py  pyproject.toml
ms-courses-platform/: Pulumi.main.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
repo/: Pulumi.yaml  __main__.py
