[project]
name = "repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "my-components",
]

[tool.uv.sources]
my-components = { git = "https://github.com/pablordoricaw/my-cloud-lib.git", subdirectory = "pulumi", rev = "v0.1.0" }

